--- a/config/sync/paragraphs.paragraphs_type.class_packages.yml
+++ b/config/sync/paragraphs.paragraphs_type.class_packages.yml
@@ -5,5 +5,5 @@ dependencies: {  }
 id: class_packages
 label: Fagpakker
 icon_uuid: null
-description: ''
+description: 'Viser udvalgte fagpakker'
 behavior_plugins: {  }
