--- a/config/sync/paragraphs.paragraphs_type.user_quote.yml
+++ b/config/sync/paragraphs.paragraphs_type.user_quote.yml
@@ -5,5 +5,5 @@ dependencies: {  }
 id: user_quote
 label: Udtalelse
 icon_uuid: null
-description: 'Publicér en udtalelse'
+description: 'Publicér en udtalelse fra gæster'
 behavior_plugins: {  }
