--- a/config/sync/field.field.paragraph.vih_webform.field_vih_background_img.yml
+++ b/config/sync/field.field.paragraph.vih_webform.field_vih_background_img.yml
@@ -10,7 +10,7 @@ id: paragraph.vih_webform.field_vih_background_img
 field_name: field_vih_background_img
 entity_type: paragraph
 bundle: vih_webform
-label: 'Baggrundsbillede'
+label: Baggrundsbillede
 description: ''
 required: false
 translatable: false
