--- a/config/sync/paragraphs.paragraphs_type.vih_option_group.yml
+++ b/config/sync/paragraphs.paragraphs_type.vih_option_group.yml
@@ -5,5 +5,5 @@ dependencies: {  }
 id: vih_option_group
 label: 'Option Group'
 icon_uuid: null
-description: null
+description: 'Teknisk paragraph - bruges til håndtering af ordrer'
 behavior_plugins: {  }
