--- a/config/sync/paragraphs.paragraphs_type.vih_ordered_option.yml
+++ b/config/sync/paragraphs.paragraphs_type.vih_ordered_option.yml
@@ -5,5 +5,5 @@ dependencies: {  }
 id: vih_ordered_option
 label: 'Ordered Option'
 icon_uuid: null
-description: null
+description: 'Teknisk paragraph - bruges til håndtering af ordrer'
 behavior_plugins: {  }
