--- a/config/sync/core.entity_form_display.node.vih_short_course_order.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_short_course_order.default.yml
@@ -62,7 +62,7 @@ content:
       edit_mode: open
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: _none
     third_party_settings: {  }
     region: content
   field_vih_sco_persons:
@@ -74,7 +74,7 @@ content:
       edit_mode: open
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: _none
     third_party_settings: {  }
     region: content
   field_vih_sco_price:
