--- a/config/sync/core.entity_form_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_long_cource.default.yml
@@ -226,7 +226,7 @@ content:
       autocollapse: all
       add_mode: modal
       form_display_mode: default
-      default_paragraph_type: 1_column_action_centered
+      default_paragraph_type: _none
     third_party_settings: {  }
   field_vih_top_banner:
     type: entity_browser_entity_reference
