--- a/config/sync/core.entity_form_display.paragraph.vih_option_group.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_option_group.default.yml
@@ -23,7 +23,7 @@ content:
       edit_mode: open
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: _none
     third_party_settings: {  }
     region: content
   field_vih_og_title:
