--- a/config/sync/core.entity_form_display.paragraph.vih_ordered_course_person.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_ordered_course_person.default.yml
@@ -102,7 +102,7 @@ content:
       edit_mode: open
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: _none
       closed_mode: summary
       autocollapse: none
     third_party_settings: {  }
