--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class_package.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class_package.default.yml
@@ -149,7 +149,7 @@ content:
       autocollapse: all
       add_mode: modal
       form_display_mode: default
-      default_paragraph_type: 1_column_action_centered
+      default_paragraph_type: _none
     third_party_settings: {  }
     type: paragraphs
     region: content
