--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -171,7 +171,7 @@ content:
       autocollapse: all
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: 1_column_action_centered
+      default_paragraph_type: _none
     third_party_settings: {  }
   field_vih_user_phone:
     type: string_textfield
