--- a/config/sync/core.entity_form_display.paragraph.vih_class_groups_accordion.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_class_groups_accordion.default.yml
@@ -86,6 +86,9 @@ content:
     third_party_settings: {  }
     type: link_default
     region: content
+  translation:
+    weight: 10
+    region: content
 hidden:
   created: true
   status: true
