--- a/config/sync/core.entity_form_display.paragraph.vih_option_group.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_option_group.default.yml
@@ -34,6 +34,9 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  translation:
+    weight: 10
+    region: content
 hidden:
   created: true
   status: true
