--- a/composer.json
+++ b/composer.json
@@ -111,7 +111,8 @@
         "enable-patching": true,
         "patches": {
             "drupal/core": {
-                "2868294 - Call to a member function getThirdPartySetting() on null in ContentTranslationManager": "https://www.drupal.org/files/issues/2868294-12.patch"
+                "2868294 - Call to a member function getThirdPartySetting() on null in ContentTranslationManager": "https://www.drupal.org/files/issues/2868294-12.patch",
+                "2449895 - Imported PO files have no public URL but have a link at admin/content/files" : "https://www.drupal.org/files/issues/2449895-20.patch"
             },
             "drupal/photoswipe": {
                 "2921487 - Load PhotoSwipe on all non-admin pages" : "https://www.drupal.org/files/issues/edit_load_photoswipe_on-2921487-2.patch",
