--- a/docroot/modules/custom/vih_subscription/vih_subscription.routing.yml
+++ b/docroot/modules/custom/vih_subscription/vih_subscription.routing.yml
@@ -96,6 +96,13 @@ vih_subscription.subscription_error_redirect:
     _title_callback: '\Drupal\vih_subscription\Controller\SubscriptionErrorController::getTitle'
   requirements:
     _permission: 'access content'
+system.admin_config_vih_subscriptions:
+  path: '/admin/config/vih_settings'
+  defaults:
+    _controller: '\Drupal\system\Controller\SystemController::systemAdminMenuBlockPage'
+    _title: 'System'
+  requirements:
+    _permission: 'access administration pages'
 vih_subscription.admin.notifications.settings_form:
   path: '/admin/config/vih_subscription/notifications/settings'
   defaults:
@@ -132,3 +139,14 @@ vih_subscription.admin.redirection_pages.settings_form:
     _permission: 'access administration pages'
   options:
     _admin_route: TRUE
+vih_subscription.admin.long_course_subscription.settings_form:
+  path: '/admin/config/vih_subscription/long_course_subscription/settings'
+  defaults:
+    _form: '\Drupal\vih_subscription\Form\LongCourseSubscriptionSettingsForm'
+    _title: 'VIH long course subscription settings'
+  requirements:
+    _permission: 'access administration pages'
+  options:
+    _admin_route: TRUE
+
+
