--- a/config/sync/core.entity_form_display.paragraph.event_list.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.event_list.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - entity_browser.browser.media_browser
     - field.field.paragraph.event_list.field_vih_background_color
     - field.field.paragraph.event_list.field_vih_background_img
+    - field.field.paragraph.event_list.field_vih_empty_message
     - field.field.paragraph.event_list.field_vih_event_id
     - field.field.paragraph.event_list.field_vih_heading
     - field.field.paragraph.event_list.field_vih_link
@@ -57,6 +58,14 @@ content:
       open: true
     region: content
     third_party_settings: {  }
+  field_vih_empty_message:
+    weight: 11
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
+    region: content
   field_vih_event_id:
     type: entity_reference_autocomplete
     weight: 2
@@ -81,6 +90,9 @@ content:
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
+    region: content
+  translation:
+    weight: 10
     region: content
 hidden:
   created: true
