--- a/config/sync/core.entity_form_display.paragraph.long_course_list_.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.long_course_list_.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.paragraph.long_course_list_.field_vih_background_color
     - field.field.paragraph.long_course_list_.field_vih_background_img
     - field.field.paragraph.long_course_list_.field_vih_course_id
+    - field.field.paragraph.long_course_list_.field_vih_empty_message
     - field.field.paragraph.long_course_list_.field_vih_heading
     - field.field.paragraph.long_course_list_.field_vih_link
     - paragraphs.paragraphs_type.long_course_list_
@@ -66,6 +67,14 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  field_vih_empty_message:
+    weight: 11
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
+    region: content
   field_vih_heading:
     weight: 0
     settings:
@@ -81,6 +90,9 @@ content:
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
+    region: content
+  translation:
+    weight: 10
     region: content
 hidden:
   created: true
