--- a/config/sync/core.entity_form_display.paragraph.long_course_list_contain_class.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.long_course_list_contain_class.default.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
+    - field.field.paragraph.long_course_list_contain_class.field_vih_empty_message
     - field.field.paragraph.long_course_list_contain_class.field_vih_heading
     - paragraphs.paragraphs_type.long_course_list_contain_class
   module:
@@ -12,6 +13,14 @@ targetEntityType: paragraph
 bundle: long_course_list_contain_class
 mode: default
 content:
+  field_vih_empty_message:
+    weight: 7
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
+    region: content
   field_vih_heading:
     weight: 6
     settings:
