--- a/config/sync/core.entity_view_display.paragraph.event_list.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.event_list.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.event_list.field_vih_background_color
     - field.field.paragraph.event_list.field_vih_background_img
+    - field.field.paragraph.event_list.field_vih_empty_message
     - field.field.paragraph.event_list.field_vih_event_id
     - field.field.paragraph.event_list.field_vih_heading
     - field.field.paragraph.event_list.field_vih_link
@@ -16,6 +17,13 @@ targetEntityType: paragraph
 bundle: event_list
 mode: default
 content:
+  field_vih_empty_message:
+    weight: 2
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
+    region: content
   field_vih_heading:
     weight: 0
     label: hidden
