--- a/config/sync/core.entity_view_display.paragraph.short_course_list_.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.short_course_list_.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.paragraph.short_course_list_.field_vih_background_color
     - field.field.paragraph.short_course_list_.field_vih_background_img
     - field.field.paragraph.short_course_list_.field_vih_course_id
+    - field.field.paragraph.short_course_list_.field_vih_empty_message
     - field.field.paragraph.short_course_list_.field_vih_heading
     - field.field.paragraph.short_course_list_.field_vih_link
     - paragraphs.paragraphs_type.short_course_list_
@@ -16,6 +17,13 @@ targetEntityType: paragraph
 bundle: short_course_list_
 mode: default
 content:
+  field_vih_empty_message:
+    weight: 2
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
+    region: content
   field_vih_heading:
     weight: 0
     label: hidden
