VI-269 moving suboptions container

--- a/docroot/modules/custom/vih_subscription/vih_subscription.libraries.yml
+++ b/docroot/modules/custom/vih_subscription/vih_subscription.libraries.yml
@@ -12,3 +12,10 @@ vih-subscription-terms-and-conditions-modal:
   dependencies:
     - core/jquery
     - core/drupalSettings
+vih-subscription-suboptions-container:
+  version: 1.x
+  js:
+    js/vih_subscription_suboptions_container.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupalSettings
