--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ private
 #Because of site reinstall issue VI-206 we don't change this files
 /config/sync/field.storage.node.body.yml
 /config/sync/field.storage.node.panelizer.yml
+bellcom_quickpay_integration.settings.yml
