--- a/config/sync/core.entity_view_display.paragraph.vih_ordered_course_person.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_ordered_course_person.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_birthdate
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_city
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_comment
+    - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_country
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_cpr
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_email
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_first_name
@@ -54,6 +55,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: basic_string
+    region: content
+  field_vih_ocp_country:
+    weight: 12
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_vih_ocp_cpr:
     type: string
