VI-280 VI-280 Block export / import issue fix.

--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -84,6 +84,7 @@ module:
   path: 0
   photoswipe: 0
   rdf: 0
+  recreate_block_content: 0
   scheduled_updates: 0
   schema_metatag: 0
   search: 0
