--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
         "drupal/focal_point": "^1.0@beta",
         "drupal/schema_metatag": "^1.0",
         "drupal/warden": "^1.1",
-        "drupal/views_send": "^1.3"
+        "drupal/views_send": "^1.3",
+        "drupal/recreate_block_content": "^2.0"
     },
     "repositories": [
         {
