--- a/config/sync/field.field.user.user.field_vih_user_paragraphs.yml
+++ b/config/sync/field.field.user.user.field_vih_user_paragraphs.yml
@@ -5,16 +5,19 @@ dependencies:
   config:
     - field.storage.user.field_vih_user_paragraphs
     - paragraphs.paragraphs_type.1_column_action_centered
+    - paragraphs.paragraphs_type.article
     - paragraphs.paragraphs_type.class_packages
     - paragraphs.paragraphs_type.event_list
     - paragraphs.paragraphs_type.file
+    - paragraphs.paragraphs_type.gallery
     - paragraphs.paragraphs_type.list_of_news_teasers
     - paragraphs.paragraphs_type.long_course_list_
     - paragraphs.paragraphs_type.short_course_list_
+    - paragraphs.paragraphs_type.social_media_embed
     - paragraphs.paragraphs_type.user_quote
     - paragraphs.paragraphs_type.video
     - paragraphs.paragraphs_type.vih_class_groups_accordion
-    - paragraphs.paragraphs_type.vih_single_class_group
+    - paragraphs.paragraphs_type.vih_content_grid
     - paragraphs.paragraphs_type.vih_webform
   module:
     - entity_reference_revisions
@@ -39,12 +42,15 @@ settings:
       event_list: event_list
       file: file
       list_of_news_teasers: list_of_news_teasers
+      article: article
       long_course_list_: long_course_list_
       short_course_list_: short_course_list_
       user_quote: user_quote
       video: video
+      gallery: gallery
       vih_class_groups_accordion: vih_class_groups_accordion
-      vih_single_class_group: vih_single_class_group
+      social_media_embed: social_media_embed
+      vih_content_grid: vih_content_grid
       vih_webform: vih_webform
     target_bundles_drag_drop:
       1_column_action_centered:
@@ -62,13 +68,13 @@ settings:
       list_of_news_teasers:
         enabled: true
         weight: 28
+      article:
+        enabled: true
+        weight: 29
       long_course_list_:
         enabled: true
         weight: 29
-      news_list:
-        weight: 30
-        enabled: false
-      page_content:
+      employee:
         weight: 31
         enabled: false
       short_course_list_:
@@ -80,11 +86,17 @@ settings:
       video:
         enabled: true
         weight: 34
+      gallery:
+        enabled: true
+        weight: 34
       vih_class_groups_accordion:
         enabled: true
         weight: 35
       vih_course_slot:
         weight: 36
+        enabled: false
+      long_course_list_contain_class:
+        weight: 37
         enabled: false
       vih_option:
         weight: 37
@@ -92,6 +104,9 @@ settings:
       vih_option_group:
         weight: 38
         enabled: false
+      social_media_embed:
+        enabled: true
+        weight: 39
       vih_ordered_course_period:
         weight: 39
         enabled: false
@@ -104,12 +119,15 @@ settings:
       vih_ordered_event_person:
         weight: 42
         enabled: false
+      vih_content_grid:
+        enabled: true
+        weight: 43
       vih_ordered_option:
         weight: 43
         enabled: false
       vih_single_class_group:
-        enabled: true
         weight: 44
+        enabled: false
       vih_teacher_class_description:
         weight: 45
         enabled: false
