--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "drupal/eva": "^1.0@RC",
         "drupal/stage_file_proxy": "^1.0@alpha",
         "drupal/viewsreference": "^1.0@alpha",
-        "drupal/mailchimp": "^1.3",
+        "drupal/mailchimp": "^1.6",
         "drupal/search_api": "^1.3",
         "lsolesen/edbbrugs-php-sdk": "^0.2.0",
         "quickpay/quickpay-php-client": "^1.0",
@@ -55,7 +55,8 @@
         "drupal/schema_metatag": "^1.0",
         "drupal/warden": "^1.1",
         "drupal/views_send": "^1.3",
-        "drupal/recreate_block_content": "^2.0"
+        "drupal/recreate_block_content": "^2.0",
+        "drupal/webform_mailchimp": "^5.3"
     },
     "repositories": [
         {
