--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -112,6 +112,7 @@ module:
   viewsreference: 0
   vih_subscription: 0
   webform: 0
+  webform_mailchimp: 0
   webform_ui: 0
   workbench_moderation: 0
   workflows: 0
